user profile page

--- a/docs/Composable-Platform/02.Navigation.md
+++ b/docs/Composable-Platform/02.Navigation.md
@@ -28,7 +28,7 @@ The login tab also has links that can help you reset your password if forgotten.
 
 If Windows Authentication is enabled on your Composable instance, users will see their windows login information already populated, providing a seamless Single-Sign-On (SSO) experience.
 
-<div class="lightgallery"><a data-sub-html="Composable Registration with Windows Auth" href="../img/02.02.Composable2.0_WinAuthReg.png"><img alt="Composable Registration with Windows Auth" src="../img/02.02.Composable2.0_WinAuthReg.png" style="zoom: 45%;"></a></div>
+![!Composable Registration with Windows Auth](img/02.02.Composable2.0_WinAuthReg.png)
 
 As you can see on the above screenshot, the username shown is in the form domain\username and is pre-populated and read-only. To log in by bypassing Windows Authentication, and using username/password credentials, simply click on the Forms Login link.
 
@@ -50,11 +50,11 @@ The sidebar has quick links to all of Composable’s product areas so you can ju
 
 The sidebar also includes a global search widget. This is the fastest way to find anything inside Composable. Type a quick word or use our powerful search grammar to pinpoint exactly what you are looking for.
 
-<div class="lightgallery"><a data-sub-html="Composable NavBars" href="../img/02.02.Composable2.0_NavBar.png"><img alt="!Composable NavBars" src="../img/02.02.Composable2.0_NavBar.png" style="zoom: 35%;"></a></div>
+![!Composable NavBars](img/02.02.Composable2.0_NavBar.png)
 
 ### TopBar
 
-While the sidebar provides full navigation across all of Composable's product areas, the topbar across each page in Composable, provides a less-cluttered view of the current resource and key links. The topbar will display the name of the current resource, links to your user profile, version information, alerts, etc. as well as visual cues (e.g., an execution progress bar for DataFlows).
+While the sidebar provides full navigation across all of Composable's product areas, the topbar across each page in Composable, provides a less-cluttered view of the current resource and key links. The topbar will display the name of the current resource, links to your [User Profile](../Composable-Platform/05.User-Profile.md), version information, alerts, etc. as well as visual cues (e.g., an execution progress bar for DataFlows).
 
 ![!Composable NavBars](img/02.02.Composable2.0_TopBar.png)
 
