--- a/docs/Users-and-Groups/01.Overview.md
+++ b/docs/Users-and-Groups/01.Overview.md
@@ -28,7 +28,11 @@ Users create accounts in a similar fashion to any other website. The typical [re
 
 ### Main User DashBoard
 
-Every User in Composable starts out with a single auto-generated DashBoard that serves as their Main DashBoard. (Users can of course create additional DashBoards as needed. The Main DashBoard function and are stored exactly like any other DashBoard in the system; however, when a user logs on, the user is redirected to the Main DashBoard. Individuals can customize their own DashBoard, and can share this like any other DashBoard. By default, the Main DashBoard displays live elements for favorite DashBoards, Groups, and DataFlow Applications. Other default live elements include newly created and highest rated DataFlow Applications. Users can post results to the Main DashBoard, and use it as their launching pad to their most used Composable resources.
+Every User in Composable starts out with a single auto-generated DashBoard that serves as their Main DashBoard. (Users can of course create additional DashBoards as needed.) The Main DashBoard functions and is stored exactly like any other DashBoard in the system; however, when a user logs on, the user is redirected to the Main DashBoard. Individuals can customize their own DashBoard, and can share this like any other DashBoard. By default, the Main DashBoard displays live elements for favorite DashBoards, Groups, and DataFlow Applications. Other default live elements include newly created and highest rated DataFlow Applications. Users can post results to the Main DashBoard, and use it as their launching pad to their most used Composable resources.
+
+### User Profile
+
+Each User in Composable has a [User Profile](../Composable-Platform/05.User-Profile.md) page, where they can update basic information, change their password, select a theme, generate API authorization tokens, and perform other tasks. This is outlined in the [User Profile](../Composable-Platform/05.User-Profile.md) page.
 
 ## Groups
 
