user profile page

--- a/docs/Composable-Platform/05.User-Profile.md
+++ b/docs/Composable-Platform/05.User-Profile.md
@@ -13,9 +13,10 @@ Every User in Composable has a User Profile page that contains basic information
 
 In the User Profile page, you can access account management features and update information about the User, like name, profile photo and password.
 
-# Find your User Profile
 
-To find your User Profile, click on your username at top right of the screen, then choose Profile.
+# Navigating to your User Profile
+
+To navigate to your User Profile, click on your username at top right of the screen, then choose Profile.
 
 ![!User Profile Link on top right of the navigation bar](img/Composable-User-Profile-01.png)
 
@@ -25,6 +26,7 @@ To find someone else's User Profile, navigate to the [Search](../Composable-Plat
 
 !!! note
     User Profiles are securable resources, similar to DataFlows, QueryViews, and WebApps. This means you can only have read (or write) access to other users' profiles if they provided you with such access.
+
 
 # User Profile
 
@@ -50,12 +52,14 @@ These are for:
 
 ![!Change Password Page](img/Composable-User-Profile-10.png)
 
+
 ## User Details
 
 In the User Profile, you can update basic information such as First and Last Name and Organization, and you can also add a profile photo. This information is displayed on the left side of the User Profile page in the User Details section of the page.
 
 !!! note
     A User's username and email address are set to read-only, based on what was used when first registering the account. This information can only be changed by an Admin.
+
 
 ## User Settings
 
@@ -69,6 +73,7 @@ The User Settings section allows you to select a Theme color.
 The center of the User Profile page provides you with two tabs, one for User Resources and one for Group Membership. User Resources shows you all resources (DataFlows, QueryViews, etc.) created by the User. The Group Membership shows you what [Groups](../Users-and-Groups/01.Overview.md) the User is a member of.
 
 ![!User Resources and Group Membership](img/Composable-User-Profile-05.png)
+
 
 ## Recent Activity
 
