--- a/docs/DataFlows/04.Modules.md
+++ b/docs/DataFlows/04.Modules.md
@@ -33,7 +33,7 @@ After importing a Custom Module Extension into the Composable instance, these cu
 
 ![Composable DataFlow Application](img/05.ModuleDescription.png)
 
-- **Name**: A module can be renamed by the user.
+- **Name**: The name of the module. A module can be renamed by the user by double-clicking on the name. It is often helpful to document a DataFlow by renaming a module to indicate its function. You are able to hover over the module name to see its original name and description.
 - **Inputs**: Inputs can come from an output of another module, or be defined in the module itself. Values from other modules take priority over the value defined in the module. Hovering over the green node for each input will show a description and datatype of the input. Right-clicking on the input node will bring up modules whose output object type matches the input object type. Clicking one of these module options will add it to your dataflow, and add a connection to the module.
 - **Outputs**: Outputs have similar hover and right-click features as inputs. After running a dataflow or viewing a run, clicking on the output connection node will display the outputted results of the module. These can also be accessed by right-clicking the circle and selecting "View Results".
 - **Module Settings**: Clicking the settings icon will bring up a modal with error handling options
