--- a/docs/WebApps/02.WebApp-Basics.md
+++ b/docs/WebApps/02.WebApp-Basics.md
@@ -38,6 +38,7 @@ Once saved, the WebApp is immediately created and you are presented with an over
 On this screen, you can update any previous settings (e.g., Name, Description, Advanced Settings), and place the WebApp in a Folder or label it with Tags. As with other securable resources (DataFlows, QueryViews, etc.), a Share button is available that allows you to assign permissions for this WebApp to other Users and Groups.
 
 You will also find two buttons in the top right for:
+
 * Open WebApp: This will open up the WebApp in its own tab
 * Edit Source: This will open up a web-based editor to edit your WebApps source code files (e.g., html, css, js, etc.)
 
@@ -48,14 +49,16 @@ Composable provides a full web-based development environment for creating and ed
 ![!Editing a WebApp](img/Composable-WebApp-05.png)
 
 The WebApp Code Editor is a high performance editor. It features:
+
 * Syntax highlighting for various languages
 * Search and replace (Ctrl-F)
 * Live syntax checker
 * Basic editor features, such as cut, copy, and paste functionality
 * Multi-file editing
+* Image rendering
 
-The left side of the WebApp Code Editor provides a tree-view of the Webapp Files. You can create folders, and create, move or import files by using the buttons provided.
+The left side of the WebApp Code Editor provides a tree-view of the Webapp Files. You can create, delete, move or import files and folders by using the buttons provided.
 
-You can select one or more files and open them up in the center of the screen for editing.
+You can select one or more files and open them up in the center of the screen for text editing.
 
 Once ready, you can simply press the green Save button, and then click View WebApp to open your WebApp.
