--- a/docs/DataFlows/04.Modules.md
+++ b/docs/DataFlows/04.Modules.md
@@ -53,3 +53,16 @@ After importing a Custom Module Extension into the Composable instance, these cu
     - **Iterations** (looped modules only): Similar to statistics, displays the timing, duration and status for each iteration of a executed module in a loop.
     - **Create DataFlow from Selection**: This will consolidate all of the selected modules into one "Nested" module and save it as a separate DataFlow. Double-clicking this nested module will navigate you to the nested DataFlow.
 
+## Module Upgrade
+
+Modules are version controlled, and over time may be updated (with new inputs, outputs, logic, etc.) when the Composable instance is updated. If a Module is modified, the existing DataFlow will continue to use the version of the Module that was originally used when the DataFlow was first authored, and a gear icon will appear on the updated module. The DataFlow author has the choice to continue using the original Module version, or click on the gear icon to upgrade the Module
+
+![Module upgrades are available by clicking on the gear icon](img/05.ModuleUpgrade-01.png)
+
+When clicking on the gear icon, you are presented with a modal informing you of the changes to the Module, and are given an option to upgrade the Module to the latest version. In doing so, the Module will then be updated (with new inputs, outputs, etc.). Once updated, the Module cannot be reverted back to a previous version.
+
+![Module upgrades are available by clicking on the gear icon](img/05.ModuleUpgrade-02.png)
+
+Hovering over the Module name will show the current version of the Module.
+
+![Module version can be seen when hovering over the Module name](img/05.ModuleUpgrade-03.png)
