user profile edits

--- a/docs/Composable-Platform/05.System-Administration.md
+++ b/docs/Composable-Platform/05.System-Administration.md
@@ -13,13 +13,13 @@ Composable provides system level features to help users manage their resources w
 
 ## [Users](../Users-and-Groups/01.Overview.md)
 
-Users in Composable are a 'securable resource' created for an end-user. Users can be created by the end-user through the registration form or by a System Administrator through the Administration portal). A user consists of a name, email address and security credentials.
+Users in Composable are a 'securable resource' created for an end-user. Users can be created by the end-user through the registration form or by a System Administrator through the Administration portal). A User consists of a name, email address and security credentials.
 
-Users can access their profile by clicking on the icon in the topbar.
+Users can access their [User Profile](../Users-and-Groups/02.User-Profile.md) by clicking on the icon in the topbar.
 
 ![Composable Users](img/02.05.Profile-Icon.png)
 
-On a user profile page, users can:
+On a [User Profile](../Users-and-Groups/02.User-Profile.md) page, users can:
 
 - Edit their user details (e.g., Name, Organization)
 - Upload a profile photo
@@ -28,6 +28,7 @@ On a user profile page, users can:
 - View their recent activity
 - Reset their password
 - Generate an API token
+- Change their theme colors
 
 !!! note
     The API Token can be used to authenticate when communicating with Composable web resources.
@@ -37,7 +38,7 @@ On a user profile page, users can:
 !!! note
     Users can link their profiles from other third-parties (e.g., Slack, Salesforce, Fitbit, Twitter, ...) and integrate with these services via DataFlows.
 
-![!Composable Users](img/02.05.Users.png)
+![!Composable User Profile page](img/02.05.User-Profile-page.png)
 
 ## [Groups](../Users-and-Groups/01.Overview.md)
 
