--- a/docs/WebApps/02.WebApp-Basics.md
+++ b/docs/WebApps/02.WebApp-Basics.md
@@ -19,28 +19,28 @@ You will be presented with a simple configuration screen for the new WebApp.
 
 Here, simply provide:
 
-* Name: The name for the new WebApp
-* Description: (optional) free form text that describes the WebApp
-* Template: A blank or pre-configured template (html, css, js) for the WebApp
+* **Name**: The name for the new WebApp
+* **Description**: (optional) free form text that describes the WebApp
+* **Template**: A blank or pre-configured template (html, css, js) for the WebApp
 
 You are also able to set some additional "Advanced Settings" here:
 
 ![!Create a WebApp configuration screen with advanced settings shown](img/Composable-WebApp-03.png)
 
-* Entry Point: If you want to direct entry to the WebApp at a specific page (e.g. index.html)
-* Navbar Behavior: Select this to automatically collapse (hide) the Composable side and top navigation bars
-* Subheader Behavior: Select this to hide any custom sub-headers that may be set on the Composable instance.
+* **Entry Point**: If you want to direct entry to the WebApp at a specific page (e.g. index.html)
+* **Navbar Behavior**: Select this to automatically collapse (hide) the Composable side and top navigation bars
+* **Subheader Behavior**: Select this to hide any custom sub-headers that may be set on the Composable instance.
 
 Once saved, the WebApp is immediately created and you are presented with an overview screen.
 
 ![!Saved WebApp configuration screen](img/Composable-WebApp-04.png)
 
-On this screen, you can update any previous settings (e.g., Name, Description, Advanced Settings), and place the WebApp in a Folder or label it with Tags. As with other securable resources (DataFlows, QueryViews, etc.), a Share button is available that allows you to assign permissions for this WebApp to other Users and Groups.
+On this screen, you can update any previous settings (e.g., Name, Description, Advanced Settings), and place the WebApp in a Folder or label it with Tags. You can also click on the thubnail image and give the WebApp a different thumbnail (which will be shown on the Search page). As with other securable resources (DataFlows, QueryViews, etc.), a `Share` button is available that allows you to assign permissions for this WebApp to other Users and Groups.
 
 You will also find two buttons in the top right for:
 
-* Open WebApp: This will open up the WebApp in its own tab
-* Edit Source: This will open up a web-based editor to edit your WebApps source code files (e.g., html, css, js, etc.)
+* `Open WebApp`: This will open up the WebApp in its own tab
+* `Edit Source`: This will open up a web-based editor to edit your WebApps source code files (e.g., html, css, js, etc.)
 
 # Editing a WebApp
 
@@ -48,11 +48,11 @@ Composable provides a full web-based development environment for creating and ed
 
 ![!Editing a WebApp](img/Composable-WebApp-05.png)
 
-The WebApp Code Editor is a high performance editor. It features:
+The WebApp Code Editor is a high performance editor. Among its many features, the WebApp Code Editor provides:
 
 * Syntax highlighting for various languages
 * Search and replace (Ctrl-F)
-* Live syntax checker
+* Live syntax checking
 * Basic editor features, such as cut, copy, and paste functionality
 * Multi-file editing
 * Image rendering
