--- a/docs/DataFlows/05.DataFlows.md
+++ b/docs/DataFlows/05.DataFlows.md
@@ -56,9 +56,10 @@ understand and resolve the root causes of application errors.
 
 DataFlow Applications do not always have to be run by the user. Users can design DataFlows to be triggered by other external factors including, but not limited to time, email, and web requests. To run a DataFlow at the same time every day, simply drag and drop a Timer Module to the DataFlow on the Designer canvas and set the specific schedule. Composable includes an activation service running in the backend monitoring DataFlow applications with Timer Modules, and activates the DataFlows according to the configured schedules.
 
-Similarly, a background service periodically checks a system email inbox for DataFlow application emails. If an
-email is received with a DataFlow application ID, the message contents are assigned to the email module inputs in
-the DataFlow application, and the DataFlow is run.
+Similarly, a background service periodically checks a system email inbox for DataFlow application emails. If an email is received with a DataFlow application ID, the message contents are assigned to the email module inputs in the DataFlow application, and the DataFlow is run.
+
+!!! note 
+    Modules that are Activators (e.g., Timer Module, Web Receive Module, etc.) have a thin orange border to highlight their special function as an externally activated Module.
 
 A DataFlow application can also act like a web service or a web page. Simply drag and drop a ‘Web Receive’ and a ‘Web Send’ module onto the canvas. Next, fill in the logic of processing the request and assigning the response with more modules and connections. The web request activator running in the backend receives web requests, and determines which DataFlow needs to run based on the specified DataFlow application ID in the request. The service then assigns the web request contents to the web receive module and runs the DataFlow application. The activator then takes the results from the DataFlow application and assigns them to the web response.
 
