--- a/docs/Composable-Platform/02.Navigation.md
+++ b/docs/Composable-Platform/02.Navigation.md
@@ -54,7 +54,7 @@ The sidebar also includes a global search widget. This is the fastest way to fin
 
 ### TopBar
 
-While the sidebar provides full navigation across all of Composable's product areas, the topbar across each page in Composable, provides a less-cluttered view of the current resource and key links. The topbar will display the name of the current resource, links to your [User Profile](../Composable-Platform/05.User-Profile.md), version information, alerts, etc. as well as visual cues (e.g., an execution progress bar for DataFlows).
+While the sidebar provides full navigation across all of Composable's product areas, the topbar across each page in Composable provides a less-cluttered view of the current resource and key links. The topbar will display the name of the current resource, links to your [User Profile](../Composable-Platform/05.User-Profile.md), version information, alerts, etc. as well as visual cues (e.g., an execution progress bar for DataFlows).
 
 ![!Composable NavBars](img/02.02.Composable2.0_TopBar.png)
 
