--- a/docs/DataFlows/08.Example-DataFlows.md
+++ b/docs/DataFlows/08.Example-DataFlows.md
@@ -85,7 +85,7 @@ In the Module Library, search for "code", and drag and drop the Code Module onto
 
 ![!Composable Example Code Module](img/03.08.Img_5.png)
 
-The Code Module is an extremely robust module that allows you to execute blocks of Code in a number of .NET languages. Here, we will use C#. Set the Code Module inputs as follows.
+The [Code Module](../DataFlows/09.Module-Details/Code-Module.md) is an extremely robust module that allows you to execute blocks of Code in a number of .NET languages. Here, we will use C#. Set the Code Module inputs as follows.
 
 1. Inputs: This will be the list of words that the Python Module will generate. Connect the output of the Python Module to this input.
 
