Past Runs edits

--- a/docs/DataFlows/04.Modules.md
+++ b/docs/DataFlows/04.Modules.md
@@ -13,7 +13,7 @@ Composable Modules are functional blocks that have multiple inputs and outputs. 
 
 A module is an atomic processing element with strongly typed inputs and outputs. All information required for a module to execute is retrieved from its inputs through connections. Modules can be reused easily and interchanged with other modules.
 
-Each input and output on a module has a name, description and a type. Inputs and outputs are strongly typed. Objects of the same type can be assigned, and objects having types that extend base types can be assigned to inputs of the base types. For example, outputs of types ‘integer’ can be fed into a module input of type ‘object.’ Convertibility is also permitted. For example, if a DataFlow author connects an output of type ‘string’ to an input of type ‘integer,’ then the system tries to perform the conversion automatically. Note that this can result in exceptions during the running of the DataFlow application. Composable is currently using the built-in conversion framework in the type system, and new input and output types can register conversions by creating casting operator.
+Each input and output on a module has a name, description and a type. Inputs and outputs are strongly typed. Objects of the same type can be assigned, and objects having types that extend base types can be assigned to inputs of the base types. For example, outputs of types `integer` can be fed into a module input of type `object`. Convertibility is also permitted. For example, if a DataFlow author connects an output of type `string` to an input of type `integer`, then the system tries to perform the conversion automatically. Note that this can result in exceptions during the running of the DataFlow application. Composable is currently using the built-in conversion framework in the type system, and new input and output types can register conversions by creating casting operator.
 
 ## First-Class Modules
 
