--- a/docs/Getting-Started/03.Installation-and-Deployment.md
+++ b/docs/Getting-Started/03.Installation-and-Deployment.md
@@ -16,7 +16,7 @@ The Composable platform has the following components:
 - **Composable Activation Services**: The component that manages the activation and lifetime of the worker processes, including all runtime, deployment, and management activities for all Composable resources.
 - **Composable Execution Engine**: The back-end component that executes Composable runs, and orchestrates all compute and data flows.
 - **Composable Web Application**: The centralized web application of Composable.
-- **Composable Back-End Databases**: The Composable Application and Membershib databases used for membership store, application metadata and persistence.
+- **Composable Back-End Databases**: The Composable Application and Membership databases used for membership store, application metadata and persistence.
 
 In an n-tiered deployment model, the above system components can be distributed across multiple nodes. For example, Composable can be deployed with a dedicated database server, a dedicated node for the activation services and execution engine, and a dedicated web application server. In this way, isolation of the data storage, computation, business logic and web layer leads to improved stability, perfomance and scalability.
 
