error handling edits

--- a/docs/DataFlows/10.Runs.md
+++ b/docs/DataFlows/10.Runs.md
@@ -31,7 +31,7 @@ Past Runs can be view on the Run History page, by navigating to it from the Desi
 
 ![!Past Runs link on the DataFlow details page](img/Runs-03.png)
 
-The Run History page provides two main features: the Run Settings on the left and the Past Tuns in the center of the page.
+The Run History page provides two main features: the Run Settings on the left and the Past Runs in the center of the page.
 
 ![!Past Runs page](img/Runs-04.png)
 
@@ -45,7 +45,7 @@ On the Run History page, the Run Settings panel allows the user to:
 - **Avoid Saving Activated Runs**: If selected, ensures that Runs activated outside of the designer, such as from activation modules or timers, will not be saved.
 
 !!! note
-    A global "custodain service" cleans up (i.e., deletes) past Runs across the entire Composable instance. This is typically set at 60 days, but can be configured differently by the Composable system administrator.
+    A global Composable Custodian Service cleans up (i.e., deletes) past Runs across the entire Composable instance based on a set schedule. This is typically set at 60 days, but can be configured differently by the Composable system administrator based on different business requirements.
 
 ### Past Runs
 
